tests/errors/DivModByZeroConst.imp
VAR
  a
BEGIN
  a := 5 % 0;
END
